--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -30,13 +30,14 @@
 }
 
 .cell {
-  width: 30px;
-  height: 30px;
+  width: 32px;
+  height: 32px;
   line-height: 30px;
   text-align: center;
   background-color: #808080;
   border: 1px solid #c0c0c0;
   box-sizing: border-box;
+  background-position: -20px;
 }
 
 .cell.open {
@@ -45,8 +46,54 @@
 
 .adjacent-mines {
   font-weight: bold;
-  font-family: 'minesweeper-icons';
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: auto;
 }
+
+.adjacent-mines[data-number="1"] {
+  background-image: url('../../public/icons.png');
+  background-position: 0 0;
+}
+
+.adjacent-mines[data-number="2"] {
+  background-image: url('../../public/icons.png');
+  background-position: -30px 0;
+}
+
+.adjacent-mines[data-number="3"] {
+  background-image: url('../../public/icons.png');
+  background-position: -60px 0;
+}
+
+.adjacent-mines[data-number="4"] {
+  background-image: url('../../public/icons.png');
+  background-position: -90px 0;
+}
+
+.adjacent-mines[data-number="5"] {
+  background-image: url('../../public/icons.png');
+  background-position: -120px 0;
+}
+
+.adjacent-mines[data-number="6"] {
+  background-image: url('../../public/icons.png');
+  background-position: -150px 0;
+}
+
+.adjacent-mines[data-number="7"] {
+  background-image: url('../../public/icons.png');
+  background-position: -180px 0;
+}
+
+.adjacent-mines[data-number="8"] {
+  background-image: url('../../public/icons.png');
+  background-position: -210px 0;
+}
+
 
 .mine {
   font-weight: bold;
